--- a/.config
+++ b/.config
@@ -1,1 +1,23 @@
-# This is an empty file, please overwrite it after generating the .config file with the source code
+# 1. 选择平台
+CONFIG_TARGET_rockchip=y
+CONFIG_TARGET_rockchip_armv8=y
+
+# 2. 选择设备型号 (R2C Plus)
+CONFIG_TARGET_rockchip_armv8_DEVICE_friendlyarm_nanopi-r2c-plus=y
+
+# 3. 固件格式 (ext4 + 256MB 分区)
+# (这是解决 21.4MB 问题的关键, 强制生成完整 .img 镜像)
+CONFIG_TARGET_rootfs_ext4=y
+CONFIG_TARGET_ROOTFS_PARTSIZE=256
+
+# 4. 编译 Passwall
+CONFIG_PACKAGE_luci-app-passwall=y
+
+# 5. 编译 ethtool (WAN口修复补丁 rc.local 需要它)
+CONFIG_PACKAGE_ethtool=y
+
+# 6. 禁用 Passwall 的 Rust 依赖项 (修复 Rust 编译 Bug)
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Hysteria=n
+CONFIG_PACKAGE_luci-app-passwall_INCLUDE_TUIC=n
+CONFIG_PACKAGE_hysteria=n
+CONFIG_PACKAGE_tuic-client=n
